<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bcgrnd"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imgLogoChurch"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerInside"
        android:src="@drawable/newlife"
        app:layout_constraintBottom_toTopOf="@+id/tvSlogan1"
        app:layout_constraintEnd_toEndOf="@+id/tvTuesday"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/tvTuesday"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSunday1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="10dp"
        android:text="@string/sunday_one"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSunday2"
        app:layout_constraintEnd_toEndOf="@+id/imgBackground"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/imgBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSunday2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="10dp"
        android:text="@string/sunday_two"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvTuesday"
        app:layout_constraintEnd_toEndOf="@+id/tvSunday1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSunday1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="10dp"
        android:text="@string/tuesday"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgLogoChurch"
        app:layout_constraintEnd_toEndOf="@+id/tvSunday2"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/tvSunday2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSlogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingTop="10dp"
        android:text="@string/slogan_one"
        app:layout_constraintBottom_toTopOf="@+id/tvSlogan2"
        app:layout_constraintEnd_toEndOf="@+id/imgLogoChurch"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/imgLogoChurch"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSlogan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingTop="10dp"
        android:text="@string/slogan_two"
        app:layout_constraintBottom_toTopOf="@+id/tvSlogan3"
        app:layout_constraintEnd_toEndOf="@+id/tvSlogan1"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/tvSlogan1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSlogan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="serif"
        android:paddingTop="10dp"
        android:text="@string/slogan_three"
        app:layout_constraintBottom_toTopOf="@+id/tvPhone"
        app:layout_constraintEnd_toEndOf="@+id/tvSlogan2"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="@+id/tvSlogan2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="@+id/tvSlogan3"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tvSlogan3"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:fontFamily="serif"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPhone"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/tvPhone"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
